--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "vue": "^3.5.18"
   },
   "devDependencies": {
